# jd_crm_api

./: .gitignore  Cargo.toml  README.md
database/: docker-compose.yml  init.sql
src/: lib.rs  main.rs
src/helpers/: handler_utils.rs  mod.rs  shared_types.rs
src/routes/: README.md  hello_world.rs  links.rs  mod.rs  sources.rs  terms.rs  topics.rs
